--- a/webscrapping_pandas.ipynb
+++ b/webscrapping_pandas.ipynb
@@ -3083,33 +3083,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "id": "f2ab6c66-34d5-483e-8fde-442707d2f96c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "ID                   0.0\n",
-       "Provincia            0.0\n",
-       "Nombre_y_Apellido    1.4\n",
-       "Domicilio            1.4\n",
-       "Telefono             2.6\n",
-       "Edad                 0.0\n",
-       "Localidad            0.0\n",
-       "X                    1.8\n",
-       "Y                    1.8\n",
-       "Maps_search          0.0\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Final result:\n",
+      "Provincia's field null values: 0.0 %.\n",
+      "Location's field null values: 0.0 %.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "null_percent(clientes)"
+    "print(f\"\"\"\n",
+    "Final result:\n",
+    "Provincia's field null values: {null_percent(clientes.loc[:,'Provincia'])} %.\n",
+    "Location's field null values: {null_percent(clientes.loc[:,'Localidad'])} %.\n",
+    "\"\"\")"
    ]
   }
  ],
